fix: Solucionar error de persistencia en relacion bidireccional entre User y Project